--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="quiz-container"></div>
+    <div id="question-container"></div>
+    <h3 id="question">Question</h3>
+    <div id="answer-buttons"></div>
+</div>
 </body>
 </html>
